<resources>
  <string name="title_activity_main">MainActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <!--  <string name="menu_gallery">Gallery</string>-->
  <!--  <string name="menu_slideshow">Slideshow</string>-->
  <string name="menu_doctors">Doctors</string>

  <string name="error_message">Unable to process request. (%s)</string>
  <string name="error_dismiss">Dismiss</string>
  <string name="login_failure_message">Unable to sign in with the provided credentials.</string>
  <string name="sign_out">Sign out</string>

  <string name="doctor_name_hint">Doctor name</string>

  <string name="save_label">Save</string>
  <string name="cancel_label">Cancel</string>
  <string name="add_doctor">Add Doctor</string>
  <string name="doctors_label">Doctors</string>
  <string name="add_vaccine">Add Vaccine</string>
  <string name="description_label">Description:</string>
  <string name="frequency_label">Frequency</string>
  <string name="menu_doctor">Doctors</string>
  <string name="total_number_of_doses_label">Total Number of Doses:</string>
  <string name="age_range_lower_limit_label">Age Range:</string>
  <string name="age_range_upper_limit_label">" to "</string>
  <string name="menu_vaccine">Vaccines</string>
  <string name="vaccine_name_hint">Vaccine Name</string>
  <string name="description_hint">Description</string>
  <string name="frequency_hint">Frequency</string>
  <string name="total_number_of_doses_hint">Total Number of Doses</string>
  <string name="age_range_lower_limit_hint">Age Range Lower Limit</string>
  <string name="age_range_upper_limit_hint">Age Range Upper Limit</string>
  <string name="add_dose">Add Dose</string>
  <string name="dose_doctor_label">"Doctor: "</string>
  <string name="date_administered_label">Date Administered</string>
  <string name="dose_name_hint">Dose Name</string>
  <string name="date_administered_hint">Date Administered</string>
  <string name="menu_dose">Doses</string>
  <string name="menu_settings">Settings</string>

  <string name="future_vaccine_years_pref_title">Future Vaccine Years Outlook</string>
  <string name="future_vaccine_years_pref_key">future_vaccine_years_pref</string>
  <string name="menu_all_future_doses">All Future Doses</string>
  <string name="future_doses">Future Doses</string>
  <string name="future_doses_pref_key">future_doses</string>
  <string name="capture">Capture Image</string>
  <string name="preview_area">Preview Area</string>
  <string name="menu_camera">Take Picture</string>
</resources>