<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group
    android:checkableBehavior="single"
    android:id="@+id/basic_navigation"
    >
<!--    <item-->
<!--      android:id="@+id/nav_home"-->
<!--      android:icon="@drawable/ic_menu_camera"-->
<!--      android:title="@string/menu_home"/>-->
    <item
      android:id="@+id/nav_future_doses"
      android:icon="@drawable/ic_menu_gallery"
      android:title="@string/menu_all_future_doses"/>
    <item
      android:id="@+id/nav_vaccine"
      android:icon="@drawable/ic_menu_gallery"
      android:title="@string/menu_vaccine"/>
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_menu_camera"
      android:title="@string/menu_doctors"/>
  </group>
  <group
    android:id="@+id/basic_settings"
    android:checkableBehavior="none">
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_settings"
      android:title="@string/menu_settings"/>
  </group>
</menu>