<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.EditVaccineFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/half_dynamic_spacing">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/dose_name_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/save">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dose_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/dose_name_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_dynamic_spacing"
      android:src="@drawable/ic_check_black_24dp"
      app:tint="@color/submit"
      android:background="?android:selectableItemBackground"
      app:layout_constraintTop_toTopOf="@id/dose_name_layout"
      app:layout_constraintEnd_toStartOf="@id/cancel"
      app:layout_constraintBottom_toBottomOf="@id/dose_name_layout"
      android:text="@string/save_label"
      android:contentDescription="@string/save_label"/>

    <ImageButton
      android:id="@+id/cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_dynamic_spacing"
      android:src="@drawable/ic_close_black_24dp"
      app:tint="@color/cancel"
      android:background="?android:selectableItemBackground"
      app:layout_constraintTop_toTopOf="@id/dose_name_layout"
      app:layout_constraintBottom_toBottomOf="@id/dose_name_layout"
      app:layout_constraintEnd_toEndOf="parent"
      android:text="@string/cancel_label"
      android:contentDescription="@string/cancel_label"/>

    <Spinner
        android:id="@+id/doctor_name_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_dynamic_spacing"
        app:layout_constraintTop_toBottomOf="@id/dose_name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/doctor_name_hint"/>

<!--
    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/date_administered_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/doctor_name_selector"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/date_administered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/date_administered_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
-->

    <DatePicker
      android:id="@+id/date_administered"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:calendarViewShown="false"
      android:datePickerMode="spinner"
      app:layout_constraintTop_toBottomOf="@id/doctor_name_selector"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>
  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>